Use unmodifiable linked hashmap to preserve order in rankutils